--- a/menu.html
+++ b/menu.html
@@ -21,31 +21,27 @@
         </div>
 
         <nav class="nav">
-          <ul class="menu-nav">
-            <li class="menu-nav__item">
-              <a href="akarcafe.html" class="logo menu-nav__link">
-                <img src="img/akarlogo.jpg" />
-                <span class="logo-first">Akar</span>
-                <span class="logo-last">Cafe</span>
-              </a>
-            </li>
-            <li class="menu-nav__item">
-              <a href="akarcafe.html" class="menu-nav__link">
-                Home
-              </a>
-            </li>
-            <li class="menu-nav__item active">
-              <a href="menu.html" class="menu-nav__link">
-                Menu
-              </a>
-            </li>
-            <li class="menu-nav__item">
-              <a href="contact.html" class="menu-nav__link">
-                Contact
-              </a>
-            </li>
-          </ul>
-        </nav>
+            <ul class="menu-nav">
+              <li class="menu-nav__item">
+                <a href="akarcafe.html" class="logo menu-nav__link">
+                  <img src="img/akarlogo.jpg" style="width: 40px; height: 40px; position: relative;" />
+                  <span class="logo-first">AKAR</span>
+                  <span class="logo-last">Cafe</span>
+                </a>
+              </li>
+  
+              <li class="menu-nav__item">
+                <a href="index.html" class="menu-nav__link"> Home </a>
+              </li>
+              <li class="menu-nav__item active">
+                <a href="menu.html" class="menu-nav__link"> Menu </a>
+              </li>
+  
+              <li class="menu-nav__item">
+                <a href="contact.html" class="menu-nav__link"> Contact </a>
+              </li>
+            </ul>
+          </nav>
       </div>
      
     </header>
@@ -63,10 +59,10 @@
             <div class="flex">
                 
                 <div class="beverages" id="bev">
-                  <h2><a href="#bev" style="text-decoration: none; ">Beverages</a></h2>
+                  <h2><a href="#bev" style="text-decoration: none; color: black; font-size: larger;">Beverages</a></h2>
                 </div>
                 <div class="foods" >
-                    <h2><a href="#food" style="text-decoration: none; ">Foods</a></h2>
+                    <h2><a href="#food" style="text-decoration: none;color: black;font-size: larger; ">Foods</a></h2>
                   </div>
               </div>
               <!-- Beverages section -->
