--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <nav class="nav">
           <ul class="menu-nav">
             <li class="menu-nav__item">
-              <a href="akarcafe.html" class="logo menu-nav__link">
-                <img src="img/akarlogo.jpg" />
+              <a href="index.html" class="logo menu-nav__link">
+                <img src="img/akarlogo.jpg" style="width: 40px; height: 40px; position: relative;" />
                 <span class="logo-first">AKAR</span>
                 <span class="logo-last">Cafe</span>
               </a>
             </li>
 
             <li class="menu-nav__item active">
-              <a href="akarcafe.html" class="menu-nav__link"> Home </a>
+              <a href="index.html" class="menu-nav__link"> Home </a>
             </li>
             <li class="menu-nav__item">
               <a href="menu.html" class="menu-nav__link"> Menu </a>
@@ -100,6 +100,7 @@
             </div>
           </div>
         </div>
+        </section>
         <footer>
           <div class="icons">
             <a href="#!">
@@ -117,7 +118,7 @@
           </div>
           <div class="copyright">&copy; Copyright 2024</div>
         </footer>
-      </section>
+      
     </main>
   </body>
 </html>
