--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <nav class="nav">
             <ul class="menu-nav">
               <li class="menu-nav__item">
-                <a href="akarcafe.html" class="logo menu-nav__link">
+                <a href="index.html" class="logo menu-nav__link">
                   <img src="img/akarlogo.jpg" style="width: 40px; height: 40px; position: relative;"/>
                   <span class="logo-first">AKAR</span>
                   <span class="logo-last">Cafe</span>
